--- a/tex/problem_1.tex
+++ b/tex/problem_1.tex
@@ -108,7 +108,7 @@ For the error analysis, I choose $10$ logarithmically spaced step-lengths from $
 %	\label{fig:err_euler}
 %	\end{minipage}
 %\end{figure}
-Since Heun's method is of second order, we would expect its slope in a log-log plot to be roughly $2$. Comparing to the line $\sim h^2$ shows that this is the case, at least for reasonably large $h$. In figure \ref{fig:err_heun} we notice that the error line seems to have a kink for very low step lengths. This can be understood by the fact that the round-off error done by the machine pollutes the numerical calculation. As a rough estimate of the pollution: for $h = 1\cdot 10^{-5}$ we do roughly $60\,000$ steps on one period. If the round-off error in each step is $\approx 10^{-15}$ we would expect an accumulated error of $\approx 6\cdot 10^{-11}$, which indeed is comparable to the error at $h = 10^{-5}$ in figure \ref{fig:err_heun}.  
+Since Heun's method is of second order, we would expect its slope in a log-log plot to be roughly $2$. Comparing to the line $\sim h^2$ shows that this is the case, at least for reasonably large $h$. In figure \ref{fig:err_heun} we notice that the error line seems to have a kink for very low step lengths. This can be understood by the fact that the round-off error done by the machine pollutes the numerical calculation. As a rough estimate of the pollution: for $h = 1\cdot 10^{-5}$ we do roughly $60\,000$ steps on one period. If the round-off error in each step is $\approx 10^{-15}$ we would expect an accumulated error of $\approx 6\cdot 10^{-11}$, which indeed is comparable to the error at $h = 10^{-5}$ in figure \ref{fig:err_heun}. This accounts for the kink in the error at $h=10^{-5}$.  
 
 In figure \ref{fig:err_euler} we have plotted the errors for Euler's method for the same step lengths. This plot clearly demonstrates the well known fact that Euler's method is of order $1$. Notice that the error never becomes so small as to be affected by numerical round-off error done by the machine.
 
