--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -14,15 +14,23 @@ where
 	\mathbf{H}_j = -\pd{H}{\mathbf{S}_j} + \boldsymbol{\xi}_j.
 \end{equation}
 
-In the absence of noise, $\boldsymbol{\xi}_j \equiv 0$, we can find an explicit relation for the effective field $\mathbf{H}_j$ in \eqref{eq:ef_field}. This can be done by noting that 
+\begin{prop}
+	In the absence of noise, $\boldsymbol{\xi}_j = 0$, the effective field in \eqref{eq:ef_field} is given by
+	\begin{equation}\label{eq:ef_field_simp}
+		\mathbf{H}_j = \sum_{i=1}^{N} J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B}.
+	\end{equation}
+\end{prop}
+\begin{proof}
+This can be shown by simply performing the derivatives 
 \begin{align*}
 	-\pd{H}{\mathbf{S}_j} &= \frac{1}{2}\sum_{i,k}^{N} J_{ik} \frac{\partial}{\partial \mathbf{S}_j} \left( \mathbf{S}_i \cdot \mathbf{S}_k \right) + d_z \sum_{i=1}^{N} \frac{\partial }{\partial \mathbf{S}_j}(\mathbf{S}_i \cdot \mathbf{e}_z)^2 + \mu \sum_{i=1}^{N} \frac{\partial }{\partial \mathbf{S}_j} \mathbf{B}_i \cdot \mathbf{S}_i \\
 	&= \frac{1}{2}\sum_{i,k}^{N} J_{ik} \left( \delta_{ij} \mathbf{S}_k + \delta_{jk} \mathbf{S}_i \right) + d_z \sum_{i=1}^N 2 \delta_{ij} (\mathbf{S}_i \cdot \mathbf{e}_z) \mathbf{e}_z + \mu \sum_{i=1}^N \mathbf{B}_i \delta_{ij} \\
-	&= \sum_{i=1}^N J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B} \\
-	&= \sum_{i \in \mathcal{N}_j} J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B}, 
+	&= \sum_{i=1}^N J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B},
 \end{align*}
-
-where we in the last transition have made further simplifications by only performing the sum over the nearest neighbours $\mathcal{N}_j$ of $j$. Using this expression we may rewrite the LLG in \eqref{eq:llg} as
+which is the required result.
+\end{proof}
+We make further simplifications by only performing the sum in the effective field \eqref{eq:ef_field_simp} over the set of nearest neighbours $\mathcal{N}_j$ of $j$.
+Using this expression we may rewrite the LLG in \eqref{eq:llg} as
 \begin{align}\label{eq:llg_simplified}
 	\der{\mathbf{S}_j}{t} = \frac{-\gamma}{\mu(1 + \alpha^2)} \Bigg[ \mathbf{S}_j &\times \left( \sum_{i \in \mathcal{N}_j} J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B} \right) \nonumber \\
 	+ \alpha \mathbf{S}_j \times \Bigg[  \mathbf{S}_j  &\times \left( \sum_{i \in \mathcal{N}_j} J_{ij} \mathbf{S}_i + 2d_z S_{j,z} \mathbf{e}_z + \mu \mathbf{B} \right) \Bigg] \Bigg]. 
