--- a/tex/report_2.tex
+++ b/tex/report_2.tex
@@ -26,8 +26,9 @@
 	
 		We simulate a linear chain of spins through numerically solving the Landau-Lifschitz-Gilbert equation with Heun's method. The simple case of a single spin is compared to an analytical solution, and the more complicated systems are compared to known results in spin wave theory. Magnetic waves (magnons) propagating on the chain are demonstrated to emerge from this equation and their behaviour for different parameter values are discussed.
 	
-	\begin{figure}
-		
+	\begin{figure}[htb]
+		\centering
+		\includegraphics[width=\columnwidth]{../fig/front_fig.pdf}
 	\end{figure}
 	
 
@@ -57,7 +58,7 @@
 \part{Conclusion}
 \input{./conc}
 
-\bibliographystyle{unsrt}
+\bibliographystyle{alpha}
 \bibliography{references}
 
 \end{document}
