--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -3,7 +3,6 @@
 %\usepackage[left=2.00cm,right=2.00cm,top=2.00cm,bottom=2.00cm]{geometry}
 \usepackage{transparent}
 \usepackage{amsmath}                                 % AMS Math Package
-\usepackage{amsthm}                                  % Theorem Formatting
 \usepackage{amssymb}                                 % Math symbols such as \mathbb
 \usepackage{graphicx}                                % Allows for eps images
 \usepackage[dvips,margin=1in,bottom=1in]{geometry}
@@ -11,6 +10,9 @@
 \usepackage{tcolorbox}
 \usepackage[explicit,compact]{titlesec}
 \usepackage{csquotes}
+\usepackage{amsthm}
+
+
 
 \titlespacing\section{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
 \titlespacing\subsection{0pt}{12pt plus 4pt minus 2pt}{0pt plus 2pt minus 2pt}
