--- a/tex/problem_1.tex
+++ b/tex/problem_1.tex
@@ -46,7 +46,7 @@ which have solutions
 	S_y(t) &= S_y(0) \cos{(\omega t)} + S_x(0) \sin{(\omega t)} \label{eq:exact_2},
 \end{align}
 
-with the frequency $\omega = \gamma B_0$. When comparing the exact solution with the numerical estimate obtained through integrating the LLG-equation with Heun's method, the trajectories of $S_x$ and $S_y$ are as shown in figure \ref{fig:comp}.
+with the frequency $\omega = \gamma B_0$. When comparing the exact solution with the numerical estimate obtained through integrating the LLG-equation with Heun's method, the trajectories of $S_x$ and $S_y$ are as shown on the left hand plot in figure \ref{fig:comp}.
 
 %\begin{figure}[htb]
 %	\centering
@@ -67,25 +67,17 @@ with the frequency $\omega = \gamma B_0$. When comparing the exact solution with
 
 \begin{figure}[htb]
 	\centering
-	\begin{minipage}{0.49\columnwidth}
 	\includegraphics[width=\columnwidth]{../fig/comparison.pdf}
-	\captionof{figure}{The plot shows the exact solution given in \eqref{eq:exact_1} and \eqref{eq:exact_2} compared with the numerical solution sampled at every tenth step to be able to distinguish the paths.}
+	\caption{The plot on the left hand side shows the exact solution given in \eqref{eq:exact_1} and \eqref{eq:exact_2} compared with the numerical solution sampled at every tenth step to be able to distinguish the paths. The plot on the right hand side shows the difference between the exact solutions given in \eqref{eq:exact_1} and \eqref{eq:exact_2}, and the numerical solutions over one period.}
 	\label{fig:comp}
-	\end{minipage}
-	\hfill
-	\centering
-	\begin{minipage}{0.49\columnwidth}
-	\includegraphics[width=\columnwidth]{../fig/comparison_diff.pdf}
-	\caption{The plot shows the difference between the exact solutions given in \eqref{eq:exact_1} and \eqref{eq:exact_2}, and the numerical solutions over one period.}
-	\label{fig:comp_diff}
-	\end{minipage}
 \end{figure} 
-It is perhaps more enlightening to consider the pointwise difference of the exact and numerical solution. This is shown in figure \ref{fig:comp_diff}. The figure shows that the deviations locally oscillate, and that the absolute global deviations increase with time as we'd expect. Further considerations on the deviations are considered in \ref{sec:error}.
+It is perhaps more enlightening to consider the pointwise difference of the exact and numerical solution. This is shown on the right hand side of figure \ref{fig:comp}. The figure shows that the deviations locally oscillate, and that the absolute global deviations increase with time as we'd expect. Further considerations on the deviations are considered in \ref{sec:error}.
 
+\newpage
 
 \subsection{Error analysis}\label{sec:error}
 
-For the error analysis, I choose $10$ logarithmically spaced step-lengths from $10^{-5}$ to $10^{-1}$. As a measure of the \textit{global error}, that is the cumulated error over one period. The error as a function of step length is shown in figure \ref{fig:err_heun}.
+For the error analysis, I choose $10$ logarithmically spaced step-lengths from $10^{-5}$ to $10^{-1}$. As a measure of the \textit{global error}, that is the accumulated error over one period, I use the absolute difference between the numerical solutions and the corresponding known solutions in \eqref{eq:exact_1} and \eqref{eq:exact_2}. The error as a function of step length is shown in figure \ref{fig:err_heun}.
 \begin{figure}[htb]
 		\centering
 		\includegraphics[width =0.8\columnwidth]{../fig/err_heun.pdf}
@@ -108,10 +100,24 @@ For the error analysis, I choose $10$ logarithmically spaced step-lengths from $
 %	\label{fig:err_euler}
 %	\end{minipage}
 %\end{figure}
-Since Heun's method is of second order, we would expect its slope in a log-log plot to be roughly $2$. Comparing to the line $\sim h^2$ shows that this is the case, at least for reasonably large $h$. In figure \ref{fig:err_heun} we notice that the error line seems to have a kink for very low step lengths. This can be understood by the fact that the round-off error done by the machine pollutes the numerical calculation. As a rough estimate of the pollution: for $h = 1\cdot 10^{-5}$ we do roughly $60\,000$ steps on one period. If the round-off error in each step is $\approx 10^{-15}$ we would expect an accumulated error of $\approx 6\cdot 10^{-11}$, which indeed is comparable to the error at $h = 10^{-5}$ in figure \ref{fig:err_heun}. This accounts for the kink in the error at $h=10^{-5}$.  
+Since Heun's method is of second order, we would expect its slope in a log-log plot to be roughly $2$. Comparing to the line $\sim h^2$ shows that this is the case, at least for reasonably large $h$. In figure \ref{fig:err_heun} we notice that the error line seems to have a kink for very low step lengths. This can be understood by the fact that the round-off error done by the machine pollutes the numerical calculation. To have a rough estimate of the pollution for $h = 1\cdot 10^{-5}$, consider the following: We do roughly $60\,000$ steps on one period. If the round-off error in each step is $\approx 10^{-15}$ we would expect an accumulated error of $\approx 6\cdot 10^{-11}$, which indeed is comparable to the error at $h = 10^{-5}$ in figure \ref{fig:err_heun}. This accounts for the kink in the error at $h=10^{-5}$. 
 
-In figure \ref{fig:err_euler} we have plotted the errors for Euler's method for the same step lengths. This plot clearly demonstrates the well known fact that Euler's method is of order $1$. Notice that the error never becomes so small as to be affected by numerical round-off error done by the machine.
+In figure \ref{fig:err_euler} we have plotted the errors for Euler's method for the same step lengths. This plot clearly demonstrates the well known fact that Euler's method is of order $1$. Notice that the error never becomes so small as to be affected by numerical round-off error done by the machine. Also, note that the runtimes of Euler's method are always lower than the corresponding runtime of Heun's method. This is also as expected as there is one more function call involved in each step of the former method. 
 
+\begin{remark}
+	Going even further down in step length for Heun's method would result in errors eventually starting to increase for decreasing step lengths as the numerical round-off error becomes larger than the numerical error. To find the ideal step length, one should examine the numerical error and find the minimum as a function of step length. 
+	
+	One could also do this analytically: What we seek is an upper bound for the global error as a function of $h$, $e(h)$, given that we can only calculate a number in the computer up to some number $\delta$, of the order of the machine round off error. Including the round-off error is not entirely straight forward, but in essence one can derive an expression along the lines of 
+	$$
+		e(h; \delta) = M_1 h^2 + \frac{M_2}{h} \delta, 
+	$$ 
+	where $M_1$ and $M_2$ are constants depending on the function $\mathbf{f}$ defining the ODE, its derivatives and the length of the integration interval. The numerical error of the method is $\mathcal{O}(h^2)$ while the error introduced by round-off in the computer must scale approximately like $\frac{\delta}{h}$. If one manages to find the constants $M_1$ and $M_2$ (or some bounds of them), the ideal step length is approximately given by 
+	$$
+		h_{\text{ideal}} \approx \left( \frac{M_2 \delta}{2 M_1}  \right)^{1/3}.
+	$$
+	This is however not embarked on here, as step lengths $\in (10^{-3},10^{-2})$ give more than good enough results for us to study the physical properties of the system of spins.
+\end{remark}
+ 
 \begin{figure}[htb]
 	\centering
 	\includegraphics[width =0.8\columnwidth]{../fig/err_euler.pdf}
